docs/_static/renderjson.css: Update css to match codeblock formatting

--- a/docs/_static/renderjson.css
+++ b/docs/_static/renderjson.css
@@ -1,11 +1,11 @@
-pre.renderjson { overflow: scroll; font-size:smaller; border: 1px solid grey;}
+pre.renderjson { overflow: scroll; font-size:smaller; border: 1px solid #e1e4e5; padding: 12px; background-color: #eeffcc;}
 .renderjson a { text-decoration: none; }
-.renderjson .disclosure { color: crimson; font-size: 150%; }
+.renderjson .disclosure { color: grey; font-size: 150%; }
 .renderjson .syntax { color: grey; }
-.renderjson .string { color: darkred; }
+.renderjson .string { color: #4070a0; }
 .renderjson .number { color: darkcyan; }
 .renderjson .boolean { color: blueviolet; }
-.renderjson .key    { color: darkblue; }
+.renderjson .key    { color: #062873; font-weight: bold;}
 .renderjson .keyword { color: blue; }
-.renderjson .object.syntax { color: lightseagreen; }
-.renderjson .array.syntax  { color: orange; }
+.renderjson .object.syntax { color: grey; }
+.renderjson .array.syntax  { color: grey; }
